--- a/vlmis_v2.5/code/application/modules/default/views/scripts/stock/vaccine-placement-receive.phtml
+++ b/vlmis_v2.5/code/application/modules/default/views/scripts/stock/vaccine-placement-receive.phtml
@@ -50,7 +50,7 @@ foreach ($this->params as $key=>$value){
     </div>
 </div>
 <div class="row">
-    <div class="col-md-12 right"><a title="Export to Excel" href="<?php echo $this->baseUrl(); ?>/stock/export-excel?<?php echo $params; ?>"><img src="<?php echo $this->baseUrl(); ?>/images/excel-32.png" /></a></div>
+    <div class="col-md-12 right"><a title="Export to Excel" href="<?php echo $this->baseUrl(); ?>/stock/export-excel-receive?<?php echo $params; ?>"><img src="<?php echo $this->baseUrl(); ?>/images/excel-32.png" /></a></div>
 </div>
 <?php } ?>
 <br />
