--- a/vlmis_v2.5/code/application/modules/iadmin/views/scripts/manage-stocks/detail-barcode.phtml
+++ b/vlmis_v2.5/code/application/modules/iadmin/views/scripts/manage-stocks/detail-barcode.phtml
@@ -129,7 +129,7 @@ $result = $this->result;
     <div class="col-md-6">
         <label class="control-label" for="volume"><strong><?php echo $this->translate("Volume"); ?></strong></label>
         <div class="controls">      
-            <?php echo $result['volumePerUnitNet']; ?>&nbsp;
+            <?php echo $result['volumPerVial']; ?>&nbsp;
         </div>
     </div>
 </div> 
