--- a/vlmis_v2.5/code/application/modules/reports/views/scripts/inventory-management/provincial-vaccine-coverage.phtml
+++ b/vlmis_v2.5/code/application/modules/reports/views/scripts/inventory-management/provincial-vaccine-coverage.phtml
@@ -199,7 +199,7 @@ if (!empty($sel_month)) {
                 </tr>
                 <tr>
                     <td>
-                        Annualized Coverage Rate = (((Total Consumption/ Total Monthly Target)/Total Months) * 12 )*100
+                        Annualized Coverage Rate = (((Total Consumption/ Annual Target)/Total Months) * 12 )*100
                     </td></tr>
             </table>
         </div>
