--- a/vlmis_v2.5/code/application/modules/reports/views/scripts/inventory-management/vaccines-coverage.phtml
+++ b/vlmis_v2.5/code/application/modules/reports/views/scripts/inventory-management/vaccines-coverage.phtml
@@ -194,7 +194,7 @@ if (!empty($sel_month)) {
                 <tr>
                     <td>
                         &nbsp;
-                        Annualized Coverage Rate = (((Total Consumption/ Total Monthly Target)/Total Months) * 12 )*100
+                        Annualized Coverage Rate = (((Total Consumption/ Annual Target)/Total Months) * 12 )*100
                     </td></tr>
             </table>
         </div>
